--- a/data/sources/mlmu-prague.yaml
+++ b/data/sources/mlmu-prague.yaml
@@ -10,212 +10,121 @@ series:
       og_title: 'D<AI>DALOS – Post-Human Creativity: The Use of AI in Art'
       image: https://secure.meetupstatic.com/photos/event/c/e/2/6/600_496912774.jpeg
       url: https://www.meetup.com/Prague-Machine-Learning/events/278824052/
-      ical_raw:
-      - BEGIN:VCALENDAR
-      - VERSION:2.0
-      - PRODID:-//Meetup//RemoteApi//EN
-      - CALSCALE:GREGORIAN
-      - METHOD:PUBLISH
-      - X-ORIGINAL-URL:https://www.meetup.com/Prague-Machine-Learning/events/2788
-      - ' 24052/ical/x.ics'
-      - X-WR-CALNAME:Events - x.ics
-      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
-      - BEGIN:VTIMEZONE
-      - TZID:Europe/Prague
-      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
-      - X-LIC-LOCATION:Europe/Prague
-      - BEGIN:DAYLIGHT
-      - TZOFFSETFROM:+0100
-      - TZOFFSETTO:+0200
-      - TZNAME:CEST
-      - DTSTART:19700329T020000
-      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
-      - END:DAYLIGHT
-      - BEGIN:STANDARD
-      - TZOFFSETFROM:+0200
-      - TZOFFSETTO:+0100
-      - TZNAME:CET
-      - DTSTART:19701025T030000
-      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
-      - END:STANDARD
-      - END:VTIMEZONE
-      - BEGIN:VEVENT
-      - DTSTART;TZID=Europe/Prague:20210624T190000
-      - DTEND;TZID=Europe/Prague:20210624T210000
-      - STATUS:CONFIRMED
-      - 'SUMMARY:D<AI>DALOS – Post-Human Creativity: The Use of AI in Art'
-      - DESCRIPTION:Machine Learning Meetup Prague\nThursday\, June 24 at 7:00 PM
-      - ' \n\nThe artistic use of AI challenges some of the cornerstones of the mo'
-      - ' dern Western concepts of art and creativity. The artist who works with A'
-      - ' I blurs th...\n\nhttps://www.meetup.com/Prague-Machine-Learning/events/2'
-      - ' 78824052/'
-      - CLASS:PUBLIC
-      - CREATED:20210614T085338Z
-      - GEO:50.08;14.43
-      - LOCATION:Online event
-      - URL:https://www.meetup.com/Prague-Machine-Learning/events/278824052/
-      - LAST-MODIFIED:20210624T193258Z
-      - UID:event_278824052@meetup.com
-      - END:VEVENT
-      - END:VCALENDAR
+      ical:
+        summary: 'D<AI>DALOS – Post-Human Creativity: The Use of AI in Art'
+        description: 'Machine Learning Meetup Prague
+
+          Thursday, June 24 at 7:00 PM
+
+
+          The artistic use of AI challenges some of the cornerstones of the modern Western concepts of art and creativity. The artist who works with AI blurs th...
+
+
+          https://www.meetup.com/Prague-Machine-Learning/events/278824052/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_278824052@meetup.com
+        url: https://www.meetup.com/Prague-Machine-Learning/events/278824052/
+        dtstart:
+          timezone: Europe/Prague
+          datetime: 20210624T190000
+          datetime_utc: 20210624T170000Z
+        dtend:
+          timezone: Europe/Prague
+          datetime: 20210624T210000
+          datetime_utc: 20210624T190000Z
   - meetupcom:
       meta_description: 'Mon, Jun 7, 2021, 7:30 PM: We invite you to the lecture From Automation to Intelligence: The Long History of AI by Nathan Ensmenger from the Indiana University. This is the opening lecture of a discus'
       og_title: 'D<AI>DALOS – From Automation to Intelligence: The Long History of AI'
       image: https://secure.meetupstatic.com/photos/event/d/4/a/2/600_496614434.jpeg
       url: https://www.meetup.com/Prague-Machine-Learning/events/278523643/
-      ical_raw:
-      - BEGIN:VCALENDAR
-      - VERSION:2.0
-      - PRODID:-//Meetup//RemoteApi//EN
-      - CALSCALE:GREGORIAN
-      - METHOD:PUBLISH
-      - X-ORIGINAL-URL:https://www.meetup.com/Prague-Machine-Learning/events/2785
-      - ' 23643/ical/x.ics'
-      - X-WR-CALNAME:Events - x.ics
-      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
-      - BEGIN:VTIMEZONE
-      - TZID:Europe/Prague
-      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
-      - X-LIC-LOCATION:Europe/Prague
-      - BEGIN:DAYLIGHT
-      - TZOFFSETFROM:+0100
-      - TZOFFSETTO:+0200
-      - TZNAME:CEST
-      - DTSTART:19700329T020000
-      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
-      - END:DAYLIGHT
-      - BEGIN:STANDARD
-      - TZOFFSETFROM:+0200
-      - TZOFFSETTO:+0100
-      - TZNAME:CET
-      - DTSTART:19701025T030000
-      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
-      - END:STANDARD
-      - END:VTIMEZONE
-      - BEGIN:VEVENT
-      - DTSTART;TZID=Europe/Prague:20210607T193000
-      - DTEND;TZID=Europe/Prague:20210607T213000
-      - STATUS:CONFIRMED
-      - 'SUMMARY:D<AI>DALOS – From Automation to Intelligence: The Long History of'
-      - '  AI'
-      - DESCRIPTION:Machine Learning Meetup Prague\nMonday\, June 7 at 7:30 PM\n\
-      - ' nWe invite you to the lecture From Automation to Intelligence: The Long '
-      - ' History of AI by Nathan Ensmenger from the Indiana University. This is t'
-      - ' he open...\n\nhttps://www.meetup.com/Prague-Machine-Learning/events/2785'
-      - ' 23643/'
-      - CLASS:PUBLIC
-      - CREATED:20210531T075617Z
-      - GEO:50.08;14.43
-      - LOCATION:Online event
-      - URL:https://www.meetup.com/Prague-Machine-Learning/events/278523643/
-      - LAST-MODIFIED:20210607T203312Z
-      - UID:event_278523643@meetup.com
-      - END:VEVENT
-      - END:VCALENDAR
+      ical:
+        summary: 'D<AI>DALOS – From Automation to Intelligence: The Long History of AI'
+        description: 'Machine Learning Meetup Prague
+
+          Monday, June 7 at 7:30 PM
+
+          \nWe invite you to the lecture From Automation to Intelligence: The Long History of AI by Nathan Ensmenger from the Indiana University. This is the open...
+
+
+          https://www.meetup.com/Prague-Machine-Learning/events/278523643/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_278523643@meetup.com
+        url: https://www.meetup.com/Prague-Machine-Learning/events/278523643/
+        dtstart:
+          timezone: Europe/Prague
+          datetime: 20210607T193000
+          datetime_utc: 20210607T173000Z
+        dtend:
+          timezone: Europe/Prague
+          datetime: 20210607T213000
+          datetime_utc: 20210607T193000Z
   - meetupcom:
       meta_description: 'Wed, May 26, 2021, 6:00 PM: The talks will be live on YouTube.Multiple speakers will shows us how they different technologies to successfully implement MLOps with variety of organizations and they wil'
       og_title: 'MLMU Online #15: Key factors of successful MLOps'
       image: https://secure.meetupstatic.com/photos/event/7/8/c/600_496381932.jpeg
       url: https://www.meetup.com/Prague-Machine-Learning/events/278273820/
-      ical_raw:
-      - BEGIN:VCALENDAR
-      - VERSION:2.0
-      - PRODID:-//Meetup//RemoteApi//EN
-      - CALSCALE:GREGORIAN
-      - METHOD:PUBLISH
-      - X-ORIGINAL-URL:https://www.meetup.com/Prague-Machine-Learning/events/2782
-      - ' 73820/ical/x.ics'
-      - X-WR-CALNAME:Events - x.ics
-      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
-      - BEGIN:VTIMEZONE
-      - TZID:Europe/Prague
-      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
-      - X-LIC-LOCATION:Europe/Prague
-      - BEGIN:DAYLIGHT
-      - TZOFFSETFROM:+0100
-      - TZOFFSETTO:+0200
-      - TZNAME:CEST
-      - DTSTART:19700329T020000
-      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
-      - END:DAYLIGHT
-      - BEGIN:STANDARD
-      - TZOFFSETFROM:+0200
-      - TZOFFSETTO:+0100
-      - TZNAME:CET
-      - DTSTART:19701025T030000
-      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
-      - END:STANDARD
-      - END:VTIMEZONE
-      - BEGIN:VEVENT
-      - DTSTART;TZID=Europe/Prague:20210526T180000
-      - DTEND;TZID=Europe/Prague:20210526T200000
-      - STATUS:CONFIRMED
-      - 'SUMMARY:MLMU Online #15: Key factors of successful MLOps'
-      - DESCRIPTION:Machine Learning Meetup Prague\nWednesday\, May 26 at 6:00 PM
-      - ' \n\nThe talks will be live on YouTube. Multiple speakers will shows us h'
-      - ' ow they different technologies to successfully implement MLOps with vari'
-      - ' ety of org...\n\nhttps://www.meetup.com/Prague-Machine-Learning/events/2'
-      - ' 78273820/'
-      - CLASS:PUBLIC
-      - CREATED:20210519T082842Z
-      - GEO:50.08;14.43
-      - LOCATION:Online event
-      - URL:https://www.meetup.com/Prague-Machine-Learning/events/278273820/
-      - LAST-MODIFIED:20210526T185815Z
-      - UID:event_278273820@meetup.com
-      - END:VEVENT
-      - END:VCALENDAR
+      ical:
+        summary: 'MLMU Online #15: Key factors of successful MLOps'
+        description: 'Machine Learning Meetup Prague
+
+          Wednesday, May 26 at 6:00 PM
+
+
+          The talks will be live on YouTube. Multiple speakers will shows us how they different technologies to successfully implement MLOps with variety of org...
+
+
+          https://www.meetup.com/Prague-Machine-Learning/events/278273820/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_278273820@meetup.com
+        url: https://www.meetup.com/Prague-Machine-Learning/events/278273820/
+        dtstart:
+          timezone: Europe/Prague
+          datetime: 20210526T180000
+          datetime_utc: 20210526T160000Z
+        dtend:
+          timezone: Europe/Prague
+          datetime: 20210526T200000
+          datetime_utc: 20210526T180000Z
   - meetupcom:
       meta_description: 'Wed, Apr 21, 2021, 6:00 PM: Online event - streamed on YouTube.Talk: MATS stack for machine learningAbstract: At Avast we complete over 17 million phishing detections a day, providing crucial online p'
       og_title: 'Online MLMU #14: MLOps: Building feature stores and ML production pipelines'
       image: https://secure.meetupstatic.com/photos/event/4/2/f/d/600_495737149.jpeg
       url: https://www.meetup.com/Prague-Machine-Learning/events/277464280/
-      ical_raw:
-      - BEGIN:VCALENDAR
-      - VERSION:2.0
-      - PRODID:-//Meetup//RemoteApi//EN
-      - CALSCALE:GREGORIAN
-      - METHOD:PUBLISH
-      - X-ORIGINAL-URL:https://www.meetup.com/Prague-Machine-Learning/events/2774
-      - ' 64280/ical/x.ics'
-      - X-WR-CALNAME:Events - x.ics
-      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
-      - BEGIN:VTIMEZONE
-      - TZID:Europe/Prague
-      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
-      - X-LIC-LOCATION:Europe/Prague
-      - BEGIN:DAYLIGHT
-      - TZOFFSETFROM:+0100
-      - TZOFFSETTO:+0200
-      - TZNAME:CEST
-      - DTSTART:19700329T020000
-      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
-      - END:DAYLIGHT
-      - BEGIN:STANDARD
-      - TZOFFSETFROM:+0200
-      - TZOFFSETTO:+0100
-      - TZNAME:CET
-      - DTSTART:19701025T030000
-      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
-      - END:STANDARD
-      - END:VTIMEZONE
-      - BEGIN:VEVENT
-      - DTSTART;TZID=Europe/Prague:20210421T180000
-      - DTEND;TZID=Europe/Prague:20210421T200000
-      - STATUS:CONFIRMED
-      - 'SUMMARY:Online MLMU #14: MLOps: Building feature stores and ML production'
-      - '  pipelines'
-      - 'DESCRIPTION:Machine Learning Meetup Prague\nWednesday\, April 21 at 6:00 '
-      - ' PM\n\nOnline event - streamed on YouTube. Talk: MATS stack for machine l'
-      - ' earningAbstract: At Avast we complete over 17 million phishing detection'
-      - ' s a day\, pro...\n\nhttps://www.meetup.com/Prague-Machine-Learning/event'
-      - ' s/277464280/'
-      - CLASS:PUBLIC
-      - CREATED:20210409T113800Z
-      - GEO:50.08;14.43
-      - LOCATION:Online event
-      - URL:https://www.meetup.com/Prague-Machine-Learning/events/277464280/
-      - LAST-MODIFIED:20210421T183446Z
-      - UID:event_277464280@meetup.com
-      - END:VEVENT
-      - END:VCALENDAR
+      ical:
+        summary: 'Online MLMU #14: MLOps: Building feature stores and ML production pipelines'
+        description: 'Machine Learning Meetup Prague
+
+          Wednesday, April 21 at 6:00 PM
+
+
+          Online event - streamed on YouTube. Talk: MATS stack for machine learningAbstract: At Avast we complete over 17 million phishing detections a day, pro...
+
+
+          https://www.meetup.com/Prague-Machine-Learning/events/277464280/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_277464280@meetup.com
+        url: https://www.meetup.com/Prague-Machine-Learning/events/277464280/
+        dtstart:
+          timezone: Europe/Prague
+          datetime: 20210421T180000
+          datetime_utc: 20210421T160000Z
+        dtend:
+          timezone: Europe/Prague
+          datetime: 20210421T200000
+          datetime_utc: 20210421T180000Z
