--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -10,104 +10,60 @@ series:
       og_title: Prague DevOps meetup online (September)
       image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
       url: https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/
-      ical_raw:
-      - BEGIN:VCALENDAR
-      - VERSION:2.0
-      - PRODID:-//Meetup//RemoteApi//EN
-      - CALSCALE:GREGORIAN
-      - METHOD:PUBLISH
-      - X-ORIGINAL-URL:https://www.meetup.com/Prague-DevOps-Meetup/events/2802344
-      - ' 41/ical/x.ics'
-      - X-WR-CALNAME:Events - x.ics
-      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
-      - BEGIN:VTIMEZONE
-      - TZID:Europe/Prague
-      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
-      - X-LIC-LOCATION:Europe/Prague
-      - BEGIN:DAYLIGHT
-      - TZOFFSETFROM:+0100
-      - TZOFFSETTO:+0200
-      - TZNAME:CEST
-      - DTSTART:19700329T020000
-      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
-      - END:DAYLIGHT
-      - BEGIN:STANDARD
-      - TZOFFSETFROM:+0200
-      - TZOFFSETTO:+0100
-      - TZNAME:CET
-      - DTSTART:19701025T030000
-      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
-      - END:STANDARD
-      - END:VTIMEZONE
-      - BEGIN:VEVENT
-      - DTSTART;TZID=Europe/Prague:20210908T190000
-      - DTEND;TZID=Europe/Prague:20210908T210000
-      - STATUS:CONFIRMED
-      - SUMMARY:Prague DevOps meetup online (September)
-      - DESCRIPTION:Prague DevOps Meetup\nWednesday\, September 8 at 7:00 PM\n\nH
-      - ' ello doers\, The third online DevOps meetup is here and we are ready to '
-      - ' welcome all DevOps enthusiasts\, from Prague or elsewhere.The structure '
-      - ' of the ...\n\nhttps://www.meetup.com/Prague-DevOps-Meetup/events/2802344'
-      - ' 41/'
-      - CLASS:PUBLIC
-      - CREATED:20210820T120401Z
-      - GEO:50.08;14.43
-      - LOCATION:Online event
-      - URL:https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/
-      - LAST-MODIFIED:20210903T070258Z
-      - UID:event_280234441@meetup.com
-      - END:VEVENT
-      - END:VCALENDAR
+      ical:
+        summary: Prague DevOps meetup online (September)
+        description: 'Prague DevOps Meetup
+
+          Wednesday, September 8 at 7:00 PM
+
+
+          Hello doers, The third online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the ...
+
+
+          https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_280234441@meetup.com
+        url: https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/
+        dtstart:
+          timezone: Europe/Prague
+          datetime: 20210908T190000
+          datetime_utc: 20210908T170000Z
+        dtend:
+          timezone: Europe/Prague
+          datetime: 20210908T210000
+          datetime_utc: 20210908T190000Z
   - meetupcom:
       meta_description: 'Wed, Aug 4, 2021, 7:00 PM: Hello doers,The second online devops meetup is here and we are ready to welcome all devops enthusiasts, from Prague or elsewhere.The structure of the session will be similar'
       og_title: Prague DevOps meetup online
       image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
       url: https://www.meetup.com/Prague-DevOps-Meetup/events/277429169/
-      ical_raw:
-      - BEGIN:VCALENDAR
-      - VERSION:2.0
-      - PRODID:-//Meetup//RemoteApi//EN
-      - CALSCALE:GREGORIAN
-      - METHOD:PUBLISH
-      - X-ORIGINAL-URL:https://www.meetup.com/Prague-DevOps-Meetup/events/2774291
-      - ' 69/ical/x.ics'
-      - X-WR-CALNAME:Events - x.ics
-      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
-      - BEGIN:VTIMEZONE
-      - TZID:Europe/Prague
-      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
-      - X-LIC-LOCATION:Europe/Prague
-      - BEGIN:DAYLIGHT
-      - TZOFFSETFROM:+0100
-      - TZOFFSETTO:+0200
-      - TZNAME:CEST
-      - DTSTART:19700329T020000
-      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
-      - END:DAYLIGHT
-      - BEGIN:STANDARD
-      - TZOFFSETFROM:+0200
-      - TZOFFSETTO:+0100
-      - TZNAME:CET
-      - DTSTART:19701025T030000
-      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
-      - END:STANDARD
-      - END:VTIMEZONE
-      - BEGIN:VEVENT
-      - DTSTART;TZID=Europe/Prague:20210804T190000
-      - DTEND;TZID=Europe/Prague:20210804T203000
-      - STATUS:CONFIRMED
-      - SUMMARY:Prague DevOps meetup online
-      - DESCRIPTION:Prague DevOps Meetup\nWednesday\, August 4 at 7:00 PM\n\nHell
-      - ' o doers\, The second online devops meetup is here and we are ready to we'
-      - ' lcome all devops enthusiasts\, from Prague or elsewhere.The structure of'
-      - '  the...\n\nhttps://www.meetup.com/Prague-DevOps-Meetup/events/277429169/'
-      - ' '
-      - CLASS:PUBLIC
-      - CREATED:20210407T211502Z
-      - GEO:50.08;14.43
-      - LOCATION:Online event
-      - URL:https://www.meetup.com/Prague-DevOps-Meetup/events/277429169/
-      - LAST-MODIFIED:20210804T195703Z
-      - UID:event_277429169@meetup.com
-      - END:VEVENT
-      - END:VCALENDAR
+      ical:
+        summary: Prague DevOps meetup online
+        description: 'Prague DevOps Meetup
+
+          Wednesday, August 4 at 7:00 PM
+
+
+          Hello doers, The second online devops meetup is here and we are ready to welcome all devops enthusiasts, from Prague or elsewhere.The structure of the...
+
+
+          https://www.meetup.com/Prague-DevOps-Meetup/events/277429169/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_277429169@meetup.com
+        url: https://www.meetup.com/Prague-DevOps-Meetup/events/277429169/
+        dtstart:
+          timezone: Europe/Prague
+          datetime: 20210804T190000
+          datetime_utc: 20210804T170000Z
+        dtend:
+          timezone: Europe/Prague
+          datetime: 20210804T203000
+          datetime_utc: 20210804T183000Z
